<resources>
    <string name="app_name">24点游戏</string>
    <string name="app_title">24点计算器</string>
    <string name="app_start">开始游戏</string>
    <string name="todo">TODO</string>
    <string name="title_activity_result">result</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nopossiblesolve">没有结果</string>
    <string name="submit">确认</string>
    <string name="clear">清除</string>
    <string name="todo1">TODO</string>
    <string name="rule_title">24点游戏规则</string>
    <string name="rule">算24点”的游戏内容如下：一副牌中抽去大小王剩下52张，J、Q、K可以当成是11、12、13, 抽取4张牌（可以两个人玩，也可以四个人玩），用加、减、乘、除（可加括号）把牌面上的数算成24，本app旨在检验24点是否有解，为广大玩家提供帮助，增强游戏的趣味性。</string>
    <string name="state">查看说明</string>
    <string name="aboutme">关于应用</string>
    <string name="version_1_0_00">Version: 1.0.00</string>
    <string name="author">Author: 李宽宇</string>
    <string name="isnew">检查新版本</string>
    <string name="trainmodel">训练模式</string>
    <string name="x">x</string>
    <string name="div">/</string>
    <string name="sub">-</string>
    <string name="add">+</string>


</resources>