<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/piano"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_marquee"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/rule"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="-1dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/seeaboutauthor"
        android:layout_width="118dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_selector"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/aboutme"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />

    <Button
        android:id="@+id/buttonTrainModel"
        android:layout_width="118dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_selector"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/trainmodel"

        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <Button
        android:id="@+id/buttonSeeHelp"
        android:layout_width="118dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_selector"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="271dp"
        android:layout_height="82dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_title"
        android:textColor="@color/purple_200"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533" />

    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="118dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_selector"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_start"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />


</androidx.constraintlayout.widget.ConstraintLayout>
