<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@drawable/piano"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/num1"
                android:layout_width="210dp"
                android:layout_height="141dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="40sp"
                android:background="@drawable/btn_selector"

                android:layout_margin="40dp"
                />
            <Button
                android:id="@+id/num2"
                android:layout_width="210dp"
                android:layout_height="141dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="40sp"
                android:background="@drawable/btn_selector"

                android:layout_margin="40dp"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/num3"
                android:layout_width="210dp"
                android:layout_height="141dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="40sp"
                android:background="@drawable/btn_selector"

                android:layout_margin="40dp"
                />
            <Button
                android:id="@+id/num4"
                android:layout_width="210dp"
                android:layout_height="141dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="40sp"
                android:background="@drawable/btn_selector"

                android:layout_margin="40dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/btn_selector2"
                android:text="@string/add"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/btn_selector2"
                android:text="@string/sub"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/btn_selector2"
                android:text="@string/x"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/btn_selector2"
                android:text="@string/div"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/seeResult"
                android:layout_width="114dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:background="@android:drawable/ic_menu_help"
                android:backgroundTint="@color/yellow2" />

            <Button
                android:id="@+id/reset"
                android:layout_width="114dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="100dp"
                android:background="@android:drawable/ic_popup_sync"
                android:backgroundTint="#F44336" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>