<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/piano"
    android:alpha="0.8"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/fourCard"
        android:layout_width="320dp"
        android:layout_height="120dp"
        android:layout_marginBottom="395dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/card3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/card4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/back" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/heartlayout"
        android:layout_width="413dp"
        android:layout_height="180dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/card"
            android:layout_width="88dp"
            android:layout_height="128dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/todo1" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/diamondLayout"
        android:layout_width="413dp"
        android:layout_height="180dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/clubLayout"
        android:layout_width="413dp"
        android:layout_height="180dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    </FrameLayout>
    <FrameLayout
        android:id="@+id/spadeLayout"
        android:layout_width="413dp"
        android:layout_height="180dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="310dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    </FrameLayout>

    <LinearLayout
        android:layout_width="177dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spadeLayout">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/submit"
            android:textColor="@color/purple_200"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />

        <LinearLayout
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/clear"
            android:textColor="@color/purple_200"
            android:textSize="25sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>